--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -5,7 +5,7 @@ ext{
     junitVersion='4.12'
     assertJVersion='3.8.0'
     logbackVersion='1.2.3'
-    cucumberVersion = '4.2.0'
+    cucumberVersion = '4.8.0'
 
     libs = [
             slf4jApi: "org.slf4j:slf4j-api:$slf4jVersion",
@@ -21,6 +21,7 @@ ext{
                             cucumber: "net.serenity-bdd:serenity-cucumber4:${serenityCucumberVersion}",
                     ],
                     cucumber: [
+                            java: "io.cucumber:cucumber-core:${cucumberVersion}",
                             java: "io.cucumber:cucumber-java:${cucumberVersion}",
                             junit: "io.cucumber:cucumber-junit:${cucumberVersion}"
                     ],
